2006-10-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: can't use gettext.install
	here because sys.displayhook fills __builtins__._ too and it'd
	be best to maintain that behavior.

2006-10-28  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/plug-ins/gimpcons.py: "Apply" output from the
	procedure browser windows now replaces the current line, to maintain
	semantics of the old console.

2006-10-28  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-query.c: include deprecated procedures in the
	output of gimp-pdb-dump. Added #define DEBUG_OUTPUT which allows
	to dump to a format that works as input for "diff" and allows to
	easily compare two gimp version's PDB API.

2006-10-28  Michael Natterer  <mitch@gimp.org>

	* app/core/gimp-transform-utils.[ch]
	(gimp_transform_matrix_flip_free): removed unused x,y,width,height
	parameters.

	* tools/pdbgen/pdb/drawable_transform.pdb: changed accordingly.

	* app/pdb/drawable_transform_cmds.c: regenerated.

2006-10-27  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* app/core/gimpdata.c (gimp_data_class_init): fix typo
	in property construction code.

2006-10-27  Hans Breuer  <hans@breuer.org>

	* **/makefile.msc app/gimpcore.def : updated

2006-10-27  Sven Neumann  <sven@gimp.org>

	* libgimpconfig/gimpcolorconfig-enums.[ch]
	* libgimpconfig/gimpcolorconfig.c
	* libgimpconfig/gimpconfig.def: removed unused enum
	GimpColorFileOpenBehaviour.

	* app/core/core-enums.[ch]: added enum GimpColorProfilePolicy.

	* app/config/gimpcoreconfig.[ch]
	* app/config/gimprc-blurbs.h: added property "color-profile-policy".

	* app/plug-in/Makefile.am
	* app/plug-in/plug-in-icc-profile.[ch]: new files that wrap usage
	of the lcms plug-in.

	* app/file/file-open.c: implement the user-configured policy for
	embedded color profiles.

	* app/widgets/gimpimageprofileview.c: use the wrapper to call the
	plug-in-icc-profile-info procedure.

	* app/widgets/gimptoolbox-dnd.c: pass TRUE for "attach_comment"